# Telecom-Customer-Churn-Prediction

./: README.md  main.py  pyproject.toml  requirements.txt
Data/processed/: telco_customer_churn_feature_engineered.csv
app/: app.py  utils.py
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_modeling.ipynb  test.py
